test/Vehicle/Test/CompileMode/Error/ParsingErrors/functionWithMismatchedNames.vcl
test1 : Bool
test2 = True